@@ -3,3 +3,4 @@
 *Vines are burnable and sound like vines again
 +Pushing/Pulling items with hoppers in JC machines is now supported
 *Fixed syncing issues of the cultivator
+*Fixed Growth Serum issues
